syntax="proto3";
option java_multiple_files = true;
package networking.category;

message ProtobufMessage{
  string massageOrObject = 1;
}

message CategoryMessage {
  int32 id = 1;
  string categoryName = 2;
}

service CategoryService{
  rpc getAllProductCategories(ProtobufMessage) returns (ProtobufMessage);
  rpc addProductCategory(ProtobufMessage) returns (ProtobufMessage);
  rpc editProductCategory(ProtobufMessage) returns (ProtobufMessage);
  rpc deleteProductCategory(ProtobufMessage) returns (ProtobufMessage);
}